k8s/gateway/private-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: private-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "10.20.0.1"
  listeners:
    - name: argocd-https
      port: 443
      protocol: HTTPS
      hostname: "argocd.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: argocd-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: argocd

    - name: hubble-https
      port: 443
      protocol: HTTPS
      hostname: "hubble.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: hubble-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system

    - name: vault-https
      port: 443
      protocol: HTTPS
      hostname: "vault.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: vault-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: vault

    - name: pinchflat-https
      port: 443
      protocol: HTTPS
      hostname: "pinchflat.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pinchflat-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: pinchflat

    - name: immich-https
      port: 443
      protocol: HTTPS
      hostname: "immich.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: immich-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: immich

    - name: uptime-kuma-https
      port: 443
      protocol: HTTPS
      hostname: "uptime.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: uptime-kuma-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: uptime-kuma

    - name: pix-https
      port: 443
      protocol: HTTPS
      hostname: "pix.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: pix-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: pix

    - name: kommande-https
      port: 443
      protocol: HTTPS
      hostname: "kommande.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: kommande-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: kommande

    - name: games-https
      port: 443
      protocol: HTTPS
      hostname: "games.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: games-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: games

    - name: keycloak-https
      port: 443
      protocol: HTTPS
      hostname: "keycloak.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: keycloak-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: idp

    - name: policy-reporter-https
      port: 443
      protocol: HTTPS
      hostname: "policy-reporter.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: policy-reporter-tls-secret
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: policy-reporter

    - name: dinks-https
      port: 443
      protocol: HTTPS
      hostname: "dinks.internal.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: dinks-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              kubernetes.io/metadata.name: dinks
