k8s/gateway/public-gw.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: default
spec:
  gatewayClassName: cilium
  infrastructure:
    annotations:
      io.cilium/lb-ipam-ips: "192.168.1.151"
  listeners:
    - name: https
      port: 443
      protocol: HTTPS
      hostname: "*.rayq.app"
      tls:
        mode: Terminate
        certificateRefs:
          - name: rayq-wildcard-tls
            kind: Secret
      allowedRoutes:
        namespaces:
          from: All
